# mezcal

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.test.txt  requirements.txt  setup.cfg
src/mezcal/: config.py  http.py  server.py  storage.py  web.py
tests/: conftest.py  test_app_home.py  test_app_resource.py  test_exif_orientation.py  test_get_authenticator.py  test_local_storage.py  test_max_image_pixels.py  test_origin_repository.py
tests/test_exif_orientation/: 500x250_orientation_1.tif  500x250_orientation_2.tif  500x250_orientation_3.tif  500x250_orientation_4.tif  500x250_orientation_5.tif  500x250_orientation_6.tif  500x250_orientation_7.tif  500x250_orientation_8.tif  500x250_orientation_None.tif
tests/test_exif_orientation/tif/: 500x250_orientation_1.tif  500x250_orientation_2.tif  500x250_orientation_3.tif  500x250_orientation_4.tif  500x250_orientation_5.tif  500x250_orientation_6.tif  500x250_orientation_7.tif  500x250_orientation_8.tif
tests/test_local_storage/: invalid.tif
