[project]
name = "mezcal"
description = "Mezzanine Caching and Access Layer Web Application"
version = "1.1.0rc1"
dependencies = [
    "codetiming",
    "filelock",
    "flask",
    "pillow",
    "python-dotenv",
    "requests",
    "requests-jwtauth",
    "waitress",
]

[project.optional-dependencies]
test = [
    "pycodestyle",
    "pytest",
    "pytest-cov",
    "pytest-datadir",
]

[project.scripts]
mezcal = "mezcal.server:run"
